# ntran

./: .gitignore  README.md  pyproject.toml
duckduckgo/: .gitignore  analyze.py  benchmark.go  db.go  experiment_results.csv  go.mod  go.sum  main.go  parallel.go  queries.go  readme.md  schema.sql  serial.go  state.db
duckduckgo/logs/: 20241026_195250.txt  20241026_195511.txt  20241026_195523.txt  20241026_195532.txt  20241026_200256.txt  20241026_200257.txt  20241026_200339.txt  20241026_200354.txt  20241026_200355.txt  20241026_201140.txt  20241026_201203.txt  20241026_201204.txt  20241026_201342.txt  20241026_201343.txt  20241026_201841.txt  20241026_202006.txt  20241026_202007.txt  20241026_202026.txt  20241026_202041.txt  20241026_202044.txt  20241027_012603.txt  20241027_012606.txt  20241027_012609.txt
duckduckgo/results/: experiment_results-2024-10-27_17-08-13.csv  experiment_results-2024-10-27_17-11-02.csv  experiment_results-2024-10-27_17-19-27.csv  experiment_results-2024-10-27_18-26-07.csv  experiment_results-2024-10-27_18-27-34.csv  experiment_results-2024-10-27_18-29-31.csv  experiment_results-dbcount=100000-2024-10-27_18-38-46.csv  experiment_results-dbcount=100000-2024-10-30_18-46-00.csv  experiment_results-dbcount=1000000-2024-10-27_18-45-29.csv  experiment_results-dbcount=50-2024-10-27_18-59-53.csv  experiment_results-dbcount=50-2024-10-27_19-01-00.csv  experiment_results.csv
ntran/: README.md  analyze.py  go.mod  go.sum  main.go
ntran/csvs/: cold-neondb_10_2024-11-212110-02-10.csv  (+1 more)
ntran/policy/: benchmark.go  (+11 more)
schemas/: rollback.sql  schema.sql
(+14 files in other folders)
