[tool.poetry]
name = "db-systems-for-llm-agents"
version = "0.1.0"
description = ""
authors = ["Peter McNeely <pm3186@columbia.edu>", "Nikhil Ghosh <nrg2156@columbia.edu>", "Matthew Roger Nelson <mrn2135@columbia.edu>"]
readme = "README.md"
packages = [{include = "db_systems_for_llm_agents"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
plotly = "^5.24.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
